[package]
name = "wave_crafter"
version = "0.1.0"
edition = "2021"
description = "WaveCraft is a Rust-based audio synthesizer and digital audio workstation."
license = "MIT"
repository = "https://github.com/your-repo/wave.crafter"

[dependencies]
cpal = "0.15"
eframe = "0.22"
egui = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.4.0"
plotters = "0.3"
rustfft = "6.0"
gtk = "0.18"
glib = "0.18"
tokio = { version = "1", features = ["full"] }
rayon = "1.7" # Add Rayon for parallelism
crossbeam = "0.8" # Add Crossbeam for thread-safe communication
crossbeam-channel = "0.5" # Add crossbeam-channel for thread-safe communication

[package.metadata.bundle]
name = "Wave Crafter"
identifier = "com.example.wavecrafter"
icon = "assets/icon.png" # Ensure this file exists
